[package]
name = "omo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
tui = "*"
crossterm = "*"
# tokio = {version = "*",features = ["full"]}
home = "0.5.3"

# [profile.release]
# opt-level = 'z'
# lto = true
# codegen-units = 1
# panic = 'abort'
